--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
     let localCounters = [];
     
     // تم تحديد Anwar كمدير للنظام
-    const ADMIN_USERNAME = "Anwar"; 
+    const ADMIN_USERNAME = "Anwar";
+    const ADMIN_EMAIL = "anwar.alahdl311@gmail.com";
 
     window.nav = (id) => {
         document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
