--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
 <nav class="sidebar" id="sidebar">
     <div class="sidebar-item" onclick="nav('counter')">📊 العدادات والسجل</div>
+    <div class="sidebar-item" onclick="nav('reports')">📢 ريبورتات</div>
     <div class="sidebar-item" onclick="nav('notes')">📝 الملاحظات</div>
     <div class="sidebar-item" onclick="nav('settings')">⚙️ الإعدادات</div>
     <div id="adminLink" class="sidebar-item hidden" style="color:var(--admin)" onclick="openAdminBroadcast()">📢 إرسال تعميم</div>
@@ -118,6 +119,45 @@
             <input type="password" id="rPC" placeholder="تأكيد كلمة المرور">
             <button class="btn btn-primary" onclick="handleReg()">تسجيل</button>
             <button class="btn" style="background:none; color:var(--text)" onclick="toggleAuth(false)">رجوع</button>
+        </div>
+    </div>
+
+    <div id="reportsPage" class="section">
+        <div class="card" style="max-width: 700px; margin: auto;">
+            <h2 style="text-align: center; margin-bottom: 20px;">نظام الريبورتات 📢</h2>
+            
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
+                <div>
+                    <label style="font-size: 0.8rem;">ID اللاعب:</label>
+                    <input type="text" id="repId" placeholder="مثال: 120">
+                </div>
+                <div>
+                    <label style="font-size: 0.8rem;">Discord ID:</label>
+                    <input type="text" id="repDiscord" placeholder="مثال: 456789123">
+                </div>
+            </div>
+
+            <label style="display:block; margin-top:10px;">اختر التصنيف:</label>
+            <select id="repCat" onchange="updateRepSubOptions()">
+                <option value="">-- اختر السبب --</option>
+                <option value="reportr">Reportr</option>
+                <option value="summon">ريبورتات الاستدعاء</option>
+                <option value="steam">الريبورت الخاص بـ Steam</option>
+                <option value="clothes">ريبورتات الملابس</option>
+                <option value="rp">ريبورتات الـ RP</option>
+                <option value="gangs">ريبورتات الإجرام والعصابات والعساكر</option>
+                <option value="general">ريبورتات عامة</option>
+            </select>
+
+            <label style="display:block; margin-top:10px;">الرسالة (السبب التفصيلي):</label>
+            <select id="repSub">
+                <option value="">-- اختر التصنيف أولاً --</option>
+            </select>
+
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-top: 25px;">
+                <button class="btn btn-primary" onclick="copyReport('in')">📋 نسخ داخل السيرفر</button>
+                <button class="btn btn-success" onclick="copyReport('out')">🌐 نسخ خارج السيرفر</button>
+            </div>
         </div>
     </div>
 
@@ -192,6 +232,17 @@
     
     const ADMIN_USERNAME = "Anwar";
 
+    // بيانات الريبورتات
+    const repData = {
+        reportr: ["يرجى شرح مشكلتك لكي يتم خدمتك", "توجه للدعم الفني مع مايثبت ذلك", "سيتم خدمتك الان", "هل تم خدمتك بالشكل المطلوب؟", "سيتم التاكد من الموضوع , كذللك احتياطًا يرجى منك حفظ تصويرك اخر 20 دقيقه في حال الاحتياج له سيتم استدعائك"],
+        summon: ["استدعاء يخص المراقبة الدورية توجه للدعم مع تصوير 20 دقيقة", "احفظ تصوير اخر 20 دقيقه من الان وبعد الانتهاء من السيناريو توجه لدعم الفني مباشره", "استدعاء توجه للدعم الفني مع تصوير اخر 20 دقيقه"],
+        steam: ["الرجاء منك تغيير اسم ستيمك وفايف ام ويكون مطابق لاسم الدسكورد الخاص بك , وعدم تسميته ب اسم عربي او ارقام او زخرفة .. ادارة مستري تاون تتمنى لك يوم ممتع"],
+        clothes: ["يجب عليك لبس مناسب للمكان و تطبيق الاربي المناسب للمكان", "يجب عليك تغيير لبسك و مواكبة الأربي بإرتداء لبس مناسب لتجنب المحاسبة الادارية , ادارة مستري تتمنى لك يوم ممتع", "يجب عليك لبس حذاء لتجنب المحاسبة الادارية , ادارة مستري تتمنى لك يوم ممتع", "يجب عليك تغيير لبسك و عدم مخالفة تعميم الملابس لتجنب المحاسبة الادارية", "يرجى منك التوجه لاقرب محل ملابس و تغير الحزام بسبب انه خاص للعساكر فقط و اداره ميستري تاون تتمني لك وقتا ممتعا", "يجب عليك تعديل ملابسك لتتناسب مع وظيفتك، لتجنب المحاسبة الإدارية"],
+        rp: ["يجب عليك تقدير موقفك في اي حالة كنت متواجد فيها وقياسها بالحياة الواقعيه, وادارة مستري تاون تتمنى لك يوم ممتع", "يجب عليك تقدير موقفك وتقمص شخصية المصاب وقياسها بالحياة الواقعيه .ادارة مستري تاون تتمنى لك يوم ممتع", "يمنع منعا باتا الخروج عن الرول بلاي او التلميح خارج الار بي لتجنب المحاسبة الادارية", "يجب عليك ايقاف مركبتك بالشكل المناسب في المناطق الامنة تجنبا للمحاسبة الادارية , ادارة ميستري تاون تتمنى لك يوما ممتعا"],
+        gangs: ["يمنع منعاً باتاً القيام بأي أعمال (التقديح والاسلوب السيء) من العدم ويمنع محاولة افتعال الفايت بدون سبب مقنع تجنباً للمحاسبة الادارية ، وادارة مستري تاون تتمنى لك وقتاً ممتعاً", "يمنع منعاً باتا التخريم او اطلاق النار خلف الجدران لتجنب المحاسبة الادارية", "يمنع اعطاء كول والتكلم باريحيه وانت مسقط , ويجب عليك تقمص دور المصاب , تجنبا من المحاسبة الادارية", "عزيزي اللاعب يجب عليك التخطيط قبل بدء السرقة ومع التأكد من العدد المشاكرين بالسيناريو , ادارة مستري تتمنى لك يوم ممتع", "عزيزي المواطن , للتذكير يمنع كلبشة شخص بدون رفع اليد ويجب عليك الانتظار , خلاف ذالك بيتم محاسبتك بمحاسبة اداريا صارمه", "يجب عليك تقدير قيمة مركبتك والقيادة بشكل سليم و تجنب النقزات الغير واقعية, وتقدير حياتك وعدم صدم الاخريين , ادارة مستري تاون تتمنى لك يومأ ممتعأ", "يمنع الحلف باي طريقة كانت ويجب عليك تقمص الحياة الواقعيه وابعاد امور الدين بشكل عام تجنباً للمحاسبة الاداريه، وادارة مستري تاون تتمنى لك وقتاً ممتعاً", "يجب ان يكون التهديد بشكل مباشر و يمنع التهديد من داخل المركبة"],
+        general: ["يجب عليك طلب ومسعف والانتظار , ويمنع نقل المسقط بدون طلب مسعف , خلاف ذلك بيتم محاسبتك اداريًا", "يمنع منعًا باتًا معالجة شخص في حال تواجد المسعفين لتجنب المحاسبة الادارية", "في حال إزالة اربع من اطارات السيارة يمنع استكمال القيادة بها", "يمنع حمل اللاعب اثناء ركوب الدباب ايضًا المركبة", "يمنع إرتداء او إستعمال اي خوذة اثناء مشاركتك في اي إطلاق ناري", "يمنع الكذب بالمصطلحات الاتية ( سحر او باخذ حبة او صداع والخ ) .. يعرضك للمحاسبة الادارية", "يمنع منعًا باتًا القيام بأي أعمال ( التقديح والاسلوب السيء ) من العدم ويمنع محاولة افتعال الفايت بدون سبب مقنع تجنبًا للمحاسبة الادارية .. إدارة ميستري تاون تتمنى لك يومًا ممتعًا", "يمنع عليك تكرار البلاغات والسبام بالبلاغات العسكرية او الصحة , في حال تكرارها سيتم محاسبتك اداريًا"]
+    };
+
     window.nav = (id) => {
         document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
         const target = document.getElementById(id + 'Page');
@@ -203,6 +254,39 @@
     window.toggleSidebar = () => {
         document.getElementById('sidebar').classList.toggle('open');
         document.getElementById('overlay').style.display = document.getElementById('sidebar').classList.contains('open') ? 'block' : 'none';
+    };
+
+    window.updateRepSubOptions = () => {
+        const cat = document.getElementById('repCat').value;
+        const sub = document.getElementById('repSub');
+        sub.innerHTML = '<option value="">-- اختر الرد --</option>';
+        if(cat && repData[cat]) {
+            repData[cat].forEach(t => {
+                const o = document.createElement('option');
+                o.value = t; o.innerText = t.substring(0, 60) + (t.length > 60 ? "..." : "");
+                sub.appendChild(o);
+            });
+        }
+    };
+
+    window.copyReport = async (mode) => {
+        const id = document.getElementById('repId').value;
+        const disc = document.getElementById('repDiscord').value;
+        const reason = document.getElementById('repSub').value;
+
+        if(!reason) return showAlert("خطأ", "يرجى اختيار سبب الريبورت أولاً");
+
+        let text = "";
+        if(mode === 'in') {
+            if(!id) return showAlert("نقص بيانات", "يرجى إدخال الـ ID الخاص باللاعب");
+            text = `/reportr ${id} ${reason}`;
+        } else {
+            if(!disc) return showAlert("نقص بيانات", "يرجى إدخال الـ Discord ID");
+            text = `${reason}\n<@${disc}>`;
+        }
+
+        await navigator.clipboard.writeText(text);
+        showAlert("تم النسخ ✅", "تم نسخ نص الريبورت بنجاح");
     };
 
     window.toggleAuth = (reg) => {
@@ -407,11 +491,7 @@
         const batch = writeBatch(db);
 
         localCounters.forEach(c => {
-            dataToSave.push({
-                n: c.n,
-                c: c.c,
-                g: c.g
-            });
+            dataToSave.push({ n: c.n, c: c.c, g: c.g });
             batch.update(doc(db, "users", curUser.uid, "counters", c.id), { c: 0 });
         });
 
@@ -469,22 +549,15 @@
             localCounters = [];
             snap.forEach(docSnap => localCounters.push({ id: docSnap.id, ...docSnap.data() }));
 
-            // --- الفرز التلقائي: العدادات المكتملة تنزل للأسفل تلقائياً ---
             let sortedCounters = [...localCounters].sort((a, b) => {
-                const aDone = a.c >= a.g;
-                const bDone = b.c >= b.g;
-                // إذا كان a مكتمل و b غير مكتمل، a يذهب للأسفل (1)
-                if (aDone && !bDone) return 1;
-                // إذا كان b مكتمل و a غير مكتمل، b يذهب للأسفل (-1)
-                if (!aDone && bDone) return -1;
-                // إذا كان كلاهما مكتمل أو كلاهما لا، نحافظ على ترتيب ord الأصلي
+                const aDone = a.c >= a.g; const bDone = b.c >= b.g;
+                if (aDone && !bDone) return 1; if (!aDone && bDone) return -1;
                 return 0;
             });
 
             let h = '';
             sortedCounters.forEach(x => {
-                const isDone = x.c >= x.g;
-                const remaining = x.g - x.c;
+                const isDone = x.c >= x.g; const remaining = x.g - x.c;
                 let statusHtml = isDone ? `<span class="status-msg msg-success">اويلي ياشيخ انا اشهد انك كفو 🫡</span>` : `<span class="status-msg msg-info">باقيلك: <b>${remaining}</b> لتوصل لـ ${x.g}</span>`;
                 h += `<div class="counter-item ${isDone ? 'completed' : ''}">
                     <div class="move-btns"><button class="m-btn" onclick="moveCounter('${x.id}', -1)">▲</button><button class="m-btn" onclick="moveCounter('${x.id}', 1)">▼</button></div>
