--- a/index.html
+++ b/index.html
@@ -259,6 +259,19 @@
     };
 
     // --- وظائف Discord Auth المحدثة ---
+    import { 
+    getAuth, 
+    signInWithEmailAndPassword, 
+    createUserWithEmailAndPassword, 
+    onAuthStateChanged, 
+    signOut, 
+    setPersistence, 
+    browserLocalPersistence, 
+    browserSessionPersistence,
+    OAuthProvider,      // تأكد من إضافة هذه
+    signInWithPopup,    // تأكد من إضافة هذه
+    linkWithPopup       // تأكد من إضافة هذه لعملية الربط
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
     window.loginWithDiscord = async () => {
         const provider = new OAuthProvider('oidc.discord');
         try {
