--- a/index.html
+++ b/index.html
@@ -79,11 +79,17 @@
     <div id="nav_reports" class="sidebar-item" onclick="nav('reports')">📢 ريبورتات</div>
     <div class="sidebar-item" onclick="nav('notes')">📝 الملاحظات</div>
     <div class="sidebar-item" onclick="nav('settings')">⚙️ الإعدادات</div>
+    <div id="nav_admin_broadcast" class="sidebar-item hidden" style="color:var(--admin)" onclick="openAdminBroadcast()">📢 إرسال تعميم</div>
     <div id="nav_admin_panel" class="sidebar-item hidden" style="color:var(--admin)" onclick="nav('adminPanel')">🔑 لوحة الإدارة</div>
     <div class="sidebar-item" style="color:var(--danger); border-top:1px solid var(--border); margin-top:20px" onclick="logout()">🚪 خروج</div>
 </nav>
 
 <div class="container">
+    <div id="globalNotice" class="admin-msg-banner">
+        <div style="font-weight: 900; font-size: 0.9rem;">📢 رسالة من الإدارة:</div>
+        <div id="noticeText" style="font-size: 0.85rem; margin-top: 5px;"></div>
+    </div>
+
     <div id="notesPage" class="section">
         <div class="card" style="max-width: 600px; margin: auto;">
             <h3>📝 ملاحظة جديدة</h3>
@@ -93,30 +99,68 @@
         <div id="nList" style="max-width: 600px; margin: 20px auto;"></div>
     </div>
 
+    <div id="authPage" class="section active">
+        <div class="card" id="loginBox" style="max-width: 450px; margin: auto;">
+            <h2 style="text-align: center;">تسجيل الدخول</h2>
+            <input type="text" id="lUser" placeholder="الإيميل أو اليوزر نيم">
+            <input type="password" id="lPass" placeholder="كلمة المرور">
+            <button class="btn btn-primary" onclick="tryLogin()">دخول</button>
+        </div>
+    </div>
+
     <div id="adminPanelPage" class="section">
         <div class="card">
             <h3 style="color:var(--admin)">👥 إدارة المستخدمين</h3>
-            <button class="btn btn-primary" style="margin-bottom:15px; width:auto; padding:8px 20px" onclick="loadAdminPanelData()">تحديث القائمة 🔄</button>
+            <button class="btn btn-primary" style="margin-bottom:15px; width:auto; padding:8px 20px" onclick="loadAdminPanel()">تحديث القائمة 🔄</button>
             <div id="adminUserList">اضغط على التحديث لجلب البيانات...</div>
         </div>
     </div>
 
-    <div id="authPage" class="section active">
-        <div class="card" id="loginBox" style="max-width: 450px; margin: auto;">
-            <h2 style="text-align: center;">تسجيل الدخول</h2>
-            <input type="text" id="lUser" placeholder="الإيميل">
-            <input type="password" id="lPass" placeholder="كلمة المرور">
-            <button class="btn btn-primary" onclick="login()">دخول</button>
+    <div id="counterPage" class="section">
+        <div class="main-layout">
+            <div class="column-right">
+                <div class="card" style="text-align: center;">
+                    <h3>إضافة عداد جديد</h3>
+                    <input type="text" id="cn" placeholder="اسم العداد">
+                    <input type="number" id="cg" placeholder="الهدف الرقمي">
+                    <button class="btn btn-primary" onclick="addCounter()">إضافة العداد</button>
+                </div>
+                <div class="counters-grid" id="cList"></div>
+            </div>
+            <div class="divider"></div>
+            <div id="sList" class="column-left"></div>
         </div>
     </div>
+
+    <div id="reportsPage" class="section">
+        <div class="card" style="max-width: 700px; margin: auto;">
+            <h2 style="text-align: center;">نظام الريبورتات 📢</h2>
+            <input type="text" id="repId" placeholder="ID اللاعب">
+            <input type="text" id="repDiscord" placeholder="Discord ID">
+            <select id="repCat" onchange="updateRepSubOptions()"></select>
+            <select id="repSub"></select>
+            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-top: 25px;">
+                <button class="btn btn-primary" onclick="copyReport('in')">📋 نسخ داخلي</button>
+                <button class="btn btn-success" onclick="copyReport('out')">🌐 نسخ خارجي</button>
+            </div>
+        </div>
     </div>
+
+    <div id="settingsPage" class="section">
+        <div class="card" style="max-width: 500px; margin: auto;">
+            <h3>⚙️ الإعدادات الحالية</h3>
+            <div class="setting-row">اليوزر: <b id="dispU">-</b></div>
+            <div class="setting-row">الإيميل: <b id="dispE">-</b></div>
+            <button class="btn btn-danger" style="margin-top:20px" onclick="logout()">خروج</button>
+        </div>
+    </div>
+</div>
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getFirestore, doc, getDoc, updateDoc, collection, onSnapshot, addDoc, deleteDoc, query, orderBy, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+    import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, onSnapshot, addDoc, deleteDoc, query, orderBy, getDocs, limit } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
     import { getAuth, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-    // إعدادات Firebase الخاصة بك
     const firebaseConfig = {
         apiKey: "AIzaSyDrrd17evgeh6eaMSnDSUtyVIHpSOJGVzI",
         authDomain: "anwarcloud-15342.firebaseapp.com",
@@ -131,8 +175,10 @@
     const auth = getAuth(app);
 
     let curUser = null;
+    let userData = null;
+    let globalRepData = {};
 
-    // نظام المودال المطور
+    // نظام المودال الموحد والمطور
     window.showAlert = (title, msg, type = 'ok', onConfirm = null, defaultValue = '') => {
         const modal = document.getElementById('sysModal');
         const msgArea = document.getElementById('sysMsg');
@@ -140,7 +186,7 @@
         document.getElementById('sysTitle').innerText = title;
         
         if (type === 'edit') {
-            msgArea.innerHTML = `<textarea id="modalInput" rows="8" style="width:100%; border:1px solid var(--border); padding:10px; border-radius:10px; font-family:Cairo;">${defaultValue}</textarea>`;
+            msgArea.innerHTML = `<textarea id="modalInput" rows="8" style="width:100%; border:1px solid var(--border); padding:10px; border-radius:12px; font-family:Cairo; background:#f1f5f9;">${defaultValue}</textarea>`;
         } else {
             msgArea.innerHTML = `<p>${msg}</p>`;
         }
@@ -168,8 +214,13 @@
         if (user) {
             curUser = user;
             const uDoc = await getDoc(doc(db, "users", user.uid));
-            if(uDoc.exists() && uDoc.data().role === 'Admin') document.getElementById('nav_admin_panel').classList.remove('hidden');
-            nav('notes'); initListeners();
+            if(uDoc.exists()) { 
+                userData = uDoc.data();
+                if(userData.role === 'Admin') document.getElementById('nav_admin_panel').classList.remove('hidden');
+                document.getElementById('roleBadge').innerText = userData.role;
+                document.getElementById('roleBadge').style.display = 'block';
+            }
+            nav('notes'); initListeners(); listenToAnnouncements(); syncRepData();
         } else { nav('auth'); }
     });
 
@@ -192,26 +243,39 @@
     };
 
     function initListeners() {
+        // تحديث عرض الملاحظات بالأزرار الجديدة
         onSnapshot(query(collection(db, "users", curUser.uid, "notes"), orderBy("createdAt", "desc")), (snap) => {
             let h = ''; snap.forEach(d => {
-                const note = d.data();
+                const n = d.data();
                 h += `<div class="card">
-                    <pre style="white-space:pre-wrap; font-family:Cairo; font-size:0.85rem; margin-bottom:15px; color:var(--text)">${note.t}</pre>
+                    <pre style="white-space:pre-wrap; font-family:Cairo; font-size:0.85rem; margin-bottom:15px; color:var(--text)">${n.t}</pre>
                     <div style="display:grid; grid-template-columns: 1fr 1fr 1fr; gap:8px">
-                        <button class="btn btn-primary" style="padding:8px; font-size:0.75rem" onclick="editNote('${d.id}', \`${note.t}\`)">تعديل ✏️</button>
-                        <button class="btn btn-success" style="padding:8px; font-size:0.75rem" onclick="copyNote(\`${note.t}\`)">نسخ 📋</button>
+                        <button class="btn btn-primary" style="padding:8px; font-size:0.75rem" onclick="editNote('${d.id}', \`${n.t}\`)">تعديل ✏️</button>
+                        <button class="btn btn-success" style="padding:8px; font-size:0.75rem" onclick="copyNote(\`${n.t}\`)">نسخ 📋</button>
                         <button class="btn btn-danger" style="padding:8px; font-size:0.75rem" onclick="delGen('notes','${d.id}')">حذف ✖</button>
                     </div>
                 </div>`;
             });
             document.getElementById('nList').innerHTML = h;
         });
+
+        // المستمعات الأخرى...
+        onSnapshot(query(collection(db, "users", curUser.uid, "counters"), orderBy("createdAt", "asc")), (snap) => {
+            let h = ''; snap.forEach(d => {
+                const x = d.data();
+                h += `<div class="counter-item ${x.c >= x.g ? 'completed' : ''}">
+                    <b>${x.n}</b>
+                    <div class="c-btns"><button class="c-btn" onclick="updateCount('${d.id}', ${x.c + 1})">+</button><span>${x.c}</span><button class="c-btn" onclick="updateCount('${d.id}', ${x.c - 1})">-</button></div>
+                </div>`;
+            });
+            document.getElementById('cList').innerHTML = h;
+        });
     }
 
-    // الإدارة - جلب البيانات يدويًا لحل مشكلة البطء
-    window.loadAdminPanelData = async () => {
+    // إدارة المستخدمين (حل مشكلة البطء)
+    window.loadAdminPanel = async () => {
         const list = document.getElementById('adminUserList');
-        list.innerText = "جارِ التحميل...";
+        list.innerText = "جارِ جلب البيانات...";
         try {
             const snap = await getDocs(collection(db, "users"));
             list.innerHTML = '';
@@ -227,6 +291,7 @@
     window.nav = (id) => {
         document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
         document.getElementById(id + 'Page').classList.add('active');
+        if(id === 'adminPanel') loadAdminPanel();
         toggleSidebar(false);
     };
 
@@ -238,6 +303,19 @@
 
     window.delGen = (col, id) => showAlert("تأكيد الحذف", "سيتم الحذف نهائياً", "confirm", async () => { await deleteDoc(doc(db, "users", curUser.uid, col, id)); });
     window.logout = () => signOut(auth).then(() => location.reload());
+    
+    // دوال مساعدة لضمان استمرارية عمل الكود الخاص بك
+    window.syncRepData = async () => { const d = await getDoc(doc(db, "settings", "reports_config")); if(d.exists()) globalRepData = d.data(); };
+    window.updateCount = async (id, val) => { await updateDoc(doc(db, "users", curUser.uid, "counters", id), { c: Math.max(0, val) }); };
+    function listenToAnnouncements() {
+        onSnapshot(query(collection(db, "system_notices"), orderBy("createdAt", "desc"), limit(1)), snap => {
+            if(!snap.empty) {
+                const data = snap.docs[0].data();
+                document.getElementById('noticeText').innerText = data.text;
+                document.getElementById('globalNotice').style.display = 'block';
+            }
+        });
+    }
 </script>
 </body>
 </html>
