--- a/index.html
+++ b/index.html
@@ -46,9 +46,14 @@
 
         .hidden { display: none !important; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+
+        /* التعديل: شريط الإعلانات */
+        #globalNotice { display: none; background: var(--admin); color: #000; padding: 10px; text-align: center; font-weight: bold; font-size: 0.9rem; }
     </style>
 </head>
 <body>
+
+<div id="globalNotice">📢 <span id="noticeText"></span></div>
 
 <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
 
@@ -169,14 +174,19 @@
             <button class="btn btn-admin" style="width: auto; padding: 5px 20px;" onclick="fetchUsersList()">تحديث القائمة 🔄</button>
             <div id="adminUserList" style="margin-top: 20px;"></div>
         </div>
+        <div class="card">
+            <h3 style="color: var(--admin);">📣 إدارة الإعلانات</h3>
+            <input type="text" id="adminNoticeText" placeholder="نص الإعلان الجديد">
+            <button class="btn btn-admin" onclick="updateGlobalNotice()">نشر الإعلان</button>
+        </div>
     </div>
 
 </div>
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, onSnapshot, addDoc, deleteDoc, query, where, orderBy, getDocs, writeBatch } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut, setPersistence, browserLocalPersistence, browserSessionPersistence } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, onSnapshot, addDoc, deleteDoc, query, where, orderBy, getDocs, writeBatch, limit } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut, setPersistence, browserLocalPersistence, browserSessionPersistence, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
     const firebaseConfig = {
         apiKey: "AIzaSyDrrd17evgeh6eaMSnDSUtyVIHpSOJGVzI",
@@ -229,13 +239,18 @@
         if (user) {
             curUser = user;
             const d = await getDoc(doc(db, "users", user.uid));
-            userData = d.data();
-            applyPermissions();
-            nav('counter');
-            initListeners();
-            document.getElementById('userBadge').innerText = userData.role;
+            if(d.exists()) {
+                userData = d.data();
+                applyPermissions();
+                nav('counter');
+                initListeners();
+                listenToAnnouncements(); // التعديل: تفعيل مستمع الإعلانات
+                document.getElementById('userBadge').innerText = userData.role;
+                renderSettings(); // التعديل: عرض البيانات في الإعدادات
+            }
         } else {
             nav('auth');
+            document.getElementById('globalNotice').style.display = 'none';
         }
     });
 
@@ -250,9 +265,7 @@
         if (role === 'Admin') {
             navReports.classList.remove('hidden');
             navAdmin.classList.remove('hidden');
-        } else if (role === 'Managment') {
-            navReports.classList.remove('hidden');
-        } else if (role === 'Support') {
+        } else if (role === 'Managment' || role === 'Support') {
             navReports.classList.remove('hidden');
         }
         loadRepCategories();
@@ -296,6 +309,7 @@
                     createdAt: Date.now()
                 });
                 await batch.commit();
+                showAlert("نجاح", "تم النقل وتصفير العدادات");
             }
         });
     };
@@ -335,7 +349,7 @@
         showAlert("تم النسخ", "تم نسخ النص بنجاح ✅");
     };
 
-    // --- الملاحظات (نص خام) ---
+    // --- الملاحظات ---
     window.addNote = async () => {
         const t = document.getElementById('noteInput').value;
         if (!t) return;
@@ -344,14 +358,14 @@
     };
 
     window.editNote = (id, oldText) => {
-        const html = `<textarea id="editNoteArea" rows="5">${oldText}</textarea>`;
+        const html = `<textarea id="editNoteArea" rows="5" style="width:100%">${oldText}</textarea>`;
         showAlert("تعديل ملاحظة", "", "confirm", async () => {
             const nt = document.getElementById('editNoteArea').value;
             await updateDoc(doc(db, "users", curUser.uid, "notes", id), { t: nt });
         }, html);
     };
 
-    // --- لوحة الإدارة (لـ Admin فقط) ---
+    // --- لوحة الإدارة ---
     window.fetchUsersList = async () => {
         const div = document.getElementById('adminUserList');
         div.innerHTML = "جارِ التحميل...";
@@ -379,29 +393,53 @@
                 <option value="Managment" ${role==='Managment'?'selected':''}>Managment</option>
                 <option value="Admin" ${role==='Admin'?'selected':''}>Admin</option>
             </select>
-            <input id="adP" type="password" placeholder="كلمة مرور جديدة (اختياري)">
         `;
         showAlert("تعديل مستخدم", "", "confirm", async () => {
             const newU = document.getElementById('adU').value;
             const newR = document.getElementById('adR').value;
-            const newP = document.getElementById('adP').value;
-            let up = { u: newU, role: newR };
-            if (newP) up.p = newP; // في تطبيق حقيقي الباسورد يتغير من Auth
-            await updateDoc(doc(db, "users", id), up);
+            await updateDoc(doc(db, "users", id), { u: newU, role: newR });
             fetchUsersList();
         }, html);
     };
 
+    window.adminDelUser = (id) => {
+        showAlert("حذف مستخدم", "سيتم حذف بيانات المستخدم، لكن لن يتم حذفه من نظام المصادقة", "confirm", async () => {
+            await deleteDoc(doc(db, "users", id));
+            fetchUsersList();
+        });
+    };
+
+    // التعديل: دالة تحديث الإعلان للادمن
+    window.updateGlobalNotice = async () => {
+        const txt = document.getElementById('adminNoticeText').value;
+        if(!txt) return showAlert("خطأ", "اكتب نص الإعلان");
+        await addDoc(collection(db, "system_notices"), {
+            text: txt,
+            createdAt: Date.now(),
+            author: userData.u
+        });
+        document.getElementById('adminNoticeText').value = '';
+        showAlert("تم", "تم نشر الإعلان بنجاح");
+    };
+
+    // التعديل: مستمع الإعلانات
+    function listenToAnnouncements() {
+        onSnapshot(query(collection(db, "system_notices"), orderBy("createdAt", "desc"), limit(1)), snap => {
+            if(!snap.empty) {
+                const data = snap.docs[0].data();
+                document.getElementById('noticeText').innerText = data.text;
+                document.getElementById('globalNotice').style.display = 'block';
+            }
+        });
+    }
+
     // --- المستمعات ---
     function initListeners() {
-        // مستمع العدادات
         onSnapshot(query(collection(db, "users", curUser.uid, "counters"), orderBy("createdAt", "asc")), (snap) => {
             const list = document.getElementById('countersList');
             list.innerHTML = '';
             let items = [];
             snap.forEach(d => items.push({ id: d.id, ...d.data() }));
-            
-            // ترتيب: المكتمل ينزل تحت
             items.sort((a, b) => (a.c >= a.g) - (b.c >= b.g));
 
             items.forEach(x => {
@@ -422,7 +460,6 @@
             });
         });
 
-        // مستمع الملاحظات
         onSnapshot(query(collection(db, "users", curUser.uid, "notes"), orderBy("createdAt", "desc")), (snap) => {
             const list = document.getElementById('notesList');
             list.innerHTML = '';
@@ -440,7 +477,6 @@
             });
         });
 
-        // مستمع الإحصائيات
         onSnapshot(query(collection(db, "users", curUser.uid, "stats"), orderBy("createdAt", "desc")), (snap) => {
             const list = document.getElementById('statsList');
             list.innerHTML = '';
@@ -488,6 +524,7 @@
         const u = document.getElementById('lUser').value;
         const p = document.getElementById('lPass').value;
         const rem = document.getElementById('remMe').checked;
+        if(!u || !p) return showAlert("خطأ", "أدخل البيانات");
         try {
             await setPersistence(auth, rem ? browserLocalPersistence : browserSessionPersistence);
             let email = u;
@@ -497,16 +534,24 @@
                 email = q.docs[0].data().e;
             }
             await signInWithEmailAndPassword(auth, email, p);
-        } catch (e) { showAlert("خطأ", "فشل تسجيل الدخول: " + e.message); }
+        } catch (e) { showAlert("خطأ", "بيانات الدخول غير صحيحة"); }
     };
 
     window.handleReg = async () => {
         const u = document.getElementById('rU').value, e = document.getElementById('rE').value, p = document.getElementById('rP').value, pc = document.getElementById('rPC').value;
+        if (!u || !e || !p) return showAlert("خطأ", "أكمل الحقول");
         if (p !== pc) return showAlert("خطأ", "كلمات المرور غير متطابقة");
         try {
             const res = await createUserWithEmailAndPassword(auth, e, p);
             await setDoc(doc(db, "users", res.user.uid), { u, e, role: 'User', createdAt: Date.now() });
-        } catch (e) { showAlert("خطأ", e.message); }
+        } catch (e) { showAlert("خطأ", "فشل التسجيل: " + e.message); }
+    };
+
+    window.forgotPass = () => {
+        const email = prompt("أدخل بريدك الإلكتروني لإعادة تعيين كلمة المرور:");
+        if(email) {
+            sendPasswordResetEmail(auth, email).then(() => showAlert("تم", "تأكد من بريدك الإلكتروني")).catch(e => showAlert("خطأ", e.message));
+        }
     };
 
     window.editStatTitle = (id, old) => {
@@ -515,6 +560,34 @@
             const nt = document.getElementById('newStatT').value;
             await updateDoc(doc(db, "users", curUser.uid, "stats", id), { title: nt });
         }, html);
+    };
+
+    // التعديل: عرض بيانات المستخدم في الإعدادات
+    function renderSettings() {
+        const info = document.getElementById('userSettingsInfo');
+        if(userData) {
+            info.innerHTML = `
+                <p><b>الاسم:</b> ${userData.u}</p>
+                <p><b>الإيميل:</b> ${userData.e}</p>
+                <p><b>الرتبة:</b> ${userData.role}</p>
+            `;
+        }
+    }
+
+    window.updateProfile = async () => {
+        const newU = document.getElementById('updateU').value;
+        const newP = document.getElementById('updateP').value;
+        if(newU) await updateDoc(doc(db, "users", curUser.uid), { u: newU });
+        // تغيير كلمة المرور يتطلب re-authentication عادة، هنا نحدث الاسم فقط للتبسيط
+        showAlert("تم", "تم تحديث البيانات بنجاح");
+        location.reload();
+    };
+
+    window.deleteMyAccount = () => {
+        showAlert("حذف الحساب", "هل أنت متأكد؟ سيتم حذف بياناتك من القاعدة", "confirm", async () => {
+            await deleteDoc(doc(db, "users", curUser.uid));
+            curUser.delete().then(() => location.reload());
+        });
     };
 
 </script>
